# gstream-to-mjpeg

./: CMakeLists.txt  LICENSE  README.md
include/: MJPEGWriter.h
src/: MJPEGWriter.cpp  main.cpp
